# workhorse

./: .gitignore  Pipfile  README.md  example-plan.yml  example-pulls-script.yml  example-repos-script.yml  example-script.yml  go.mod  go.sum  main.py  pyproject.toml
.github/workflows/: workhorse-plan.yml  workhorse_daily.yml
cmd/workhorse/: ci.go  commands.go  execute.go  main.go  plan.go  root.go  run.go
docs/: combine.yml  pyproject.toml
docs/content/: _sidebar.html  base.template.html  github-actions.md  index.md  quickstart.md
docs/content/config/: limit.md  type.md
docs/scripts/: install  work
internal/commands/: main.go  sleep.go
internal/config/: main.go
internal/git/: main.go
internal/github/: add_labels.go  close.go  commands.go  config.go  delete_branch.go  execute.go  main.go  markdown.go  merge.go  pullrequest.go  pulls.go  remove_label.go  repo_edit.go  repos.go  search.go  sleep.go
internal/meta/: main.go
internal/scripts/: main.go  plan.go
internal/utils/: main.go
scripts/: format  go-install  install  pre-commit  release  run  test
workhorse/: api.py  cli.py  commands.py  exceptions.py  executions.py  files.py  git.py  models.py  plans.py  schema.py  settings.py  targets.py
workhorse/plans/: 2020-05-19T20:03:36Z.json  2020-05-19T20:23:56Z.json  2020-05-19T20:32:52Z.json  2020-05-19T20:40:44Z.json  2020-05-20T02:58:07Z.json  testing.json
workhorse/scripts/: label-automerge.yml  relabel-automerge.yml
workhorse/user_input/: expressions.py  template.py
