[tool.poetry]
name = "workhorse-docs"
version = "0.1.0"
description = ""
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.io>"]

[tool.poetry.dependencies]
python = "~3.7"
combine = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
